--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS} src)
 
-add_executable(TetrisGame src/main.cpp src/game.cpp src/controller.cpp src/renderer.cpp src/tetromino.cpp)
+add_executable(TetrisGame src/main.cpp src/game.cpp src/controller.cpp src/renderer.cpp src/tetro.cpp)
 string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
 target_link_libraries(TetrisGame ${SDL2_LIBRARIES})
